--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "lib": ["esnext", "dom"]
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
