--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "esbuild-plugin-copy": "2.1.1",
     "esbuild-plugin-d.ts": "^1.2.3",
     "eslint": "8.57.0",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.2",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-n": "^16.0.1",
     "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-testing-library": "6.2.2",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
@@ -43,6 +43,10 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "image-size": "^1.1.1"
+    "@rabby-wallet/rabbykit": "^0.0.5",
+    "@wagmi/core": "^1.4.13",
+    "image-size": "^1.1.1",
+    "util": "^0.12.5",
+    "viem": "^1.21.4"
   }
 }
