Add 1inch stuff

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   },
   "dependencies": {
     "@rabby-wallet/rabbykit": "^0.0.5",
+    "@uniswap/sdk": "^3.0.3",
     "@wagmi/core": "^1.4.13",
+    "ethers": "^6.12.1",
     "image-size": "^1.1.1",
     "util": "^0.12.5",
     "viem": "^1.21.4"
