Lots of random code here - tried to add connections to web sockets, linked mml docs to the frontend client, added ethereum libraries as well some stuff with npcs..
Excuse the mess.

--- a/packages/mml-document/package.json
+++ b/packages/mml-document/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mml-doc",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "build": "node ./build.js --build",
     "iterate": "node ./build.js --watch",
@@ -10,9 +11,11 @@
   },
   "dependencies": {
     "@mml-io/mml-react-types": "0.14.0",
+    "@react-three/fiber": "^8.16.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "three": "^0.165.0"
   }
 }
