--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint-fix-all": "lerna run --stream lint:fix"
   },
   "workspaces": [
-    "packages/**/*"
+    "packages/*"
   ],
   "devDependencies": {
     "@types/jest": "29.5.12",
